k8s-yaml/networkpolicy-demo/client-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client-pod
  labels:
    role: client
spec:
  containers:
  - name: ubuntu
    image: tutum/ubuntu:trusty
    imagePullPolicy: IfNotPresent
    ports:
    - name: ssh
      containerPort: 22
