k8s-yaml/networkpolicy-demo/nginx-app-deployments.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-app-demo
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx
        role: app
    spec:
      containers:
      - name: nginx-app
        image: nginx
        ports:
        - containerPort: 80
