k8s-yaml/networkpolicy-demo/nginx-db-deployments.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-db-demo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
        role: db
    spec:
      containers:
      - name: nginx-db
        image: nginx
        ports:
        - containerPort: 80
