k8s-yaml/networkpolicy-demo/other-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: other-pod
  labels:
    role: other
spec:
  containers:
  - name: ubuntu
    image: tutum/ubuntu:trusty
    imagePullPolicy: IfNotPresent
    ports:
    - name: ssh
      containerPort: 22
