k8s-yaml/networkpolicy-demo/nginx-web-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-web-policy
spec:
  podSelector:
    matchLabels:
      app: nginx
      role: web
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: nginx
          role: app
    - podSelector:
        matchLabels:
          role: client
    ports:
    - protocol: TCP
      port: 80
