k8s-yaml/networkpolicy-demo/test-net.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: only-web-traffic
spec:
  podSelector:
    matchLabels:
      app: web
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 80
